Updated domain and CI/CD script

--- a/src/Navigation/index.html
+++ b/src/Navigation/index.html
@@ -36,21 +36,21 @@
 
                 <div class="card">
                     <div class="card-body d-flex justify-content-between">
-                        <a href="https://private.grillbot.cloud/login?auto=true" class="btn btn-block btn-blurple js-required"
+                        <a href="https://private.grillbot.eu/login?auto=true" class="btn btn-block btn-blurple js-required"
                             target="_blank">
                             <i class="fab fa-discord mr-2"></i>
                             Privátní administrace
                             <i class="fa-solid fa-right-to-bracket ms-2"></i>
                         </a>
 
-                        <a href="https://public.grillbot.cloud/login?auto=true" class="btn btn-block btn-blurple js-required"
+                        <a href="https://public.grillbot.eu/login?auto=true" class="btn btn-block btn-blurple js-required"
                             target="_blank">
                             <i class="fab fa-discord mr-2"></i>
                             Veřejná administrace
                             <i class="fa-solid fa-right-to-bracket ms-2"></i>
                         </a>
 
-                        <a class="btn btn-block btn-dark" href="https://docs.grillbot.cloud/">
+                        <a class="btn btn-block btn-dark" href="https://docs.grillbot.eu/">
                             <i class="fas fa-book mr-2"></i>
                             Dokumentace
                             <i class="fa-sharp fa-solid fa-arrow-up-right-from-square ms-2"></i>
@@ -78,7 +78,7 @@
                         <ul class="mb-0">
                             <li><a href="https://stats.uptimerobot.com/vQ40jHEJr3" target="_blank" class="text-dark">Aktuální stav</a></li>
                             <li><a href="https://github.com/GrillBot" target="_blank" class="text-dark">GitHub repozitář</a></li>
-                            <li><a href="https://grillbot.cloud/swagger/index.html" target="_blank" class="text-dark">OpenAPI</a></li>
+                            <li><a href="https://grillbot.eu/swagger" target="_blank" class="text-dark">OpenAPI</a></li>
                         </ul>
                     </div>
                 </div>
