--- a/src/AdminWeb/src/index.html
+++ b/src/AdminWeb/src/index.html
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>AdminWeb</title>
     <base href="/" />
-    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
+    <meta
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      name="viewport"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
